; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_systimer.c_bcm_systimer_start.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/broadcom/bcm2835/extr_bcm2835_systimer.c_bcm_systimer_start.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eventtimer = type { i64, %struct.systimer* }
%struct.systimer = type { i32, i32 }

@SYSTIMER_CLO = common dso_local global i32 0, align 4
@SYSTIMER_CS = common dso_local global i64 0, align 8
@SYSTIMER_C0 = common dso_local global i64 0, align 8
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.eventtimer*, i32, i32)* @bcm_systimer_start to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bcm_systimer_start(%struct.eventtimer* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.eventtimer*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.systimer*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  store %struct.eventtimer* %0, %struct.eventtimer** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %13 = load %struct.eventtimer*, %struct.eventtimer** %5, align 8
  %14 = getelementptr inbounds %struct.eventtimer, %struct.eventtimer* %13, i32 0, i32 1
  %15 = load %struct.systimer*, %struct.systimer** %14, align 8
  store %struct.systimer* %15, %struct.systimer** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %64

18:                                               ; preds = %3
  %19 = load %struct.eventtimer*, %struct.eventtimer** %5, align 8
  %20 = getelementptr inbounds %struct.eventtimer, %struct.eventtimer* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = trunc i64 %21 to i32
  %23 = load i32, i32* %6, align 4
  %24 = mul nsw i32 %22, %23
  %25 = ashr i32 %24, 32
  store i32 %25, i32* %11, align 4
  %26 = call i32 (...) @intr_disable()
  store i32 %26, i32* %12, align 4
  %27 = load i32, i32* @SYSTIMER_CLO, align 4
  %28 = call i32 @bcm_systimer_tc_read_4(i32 %27)
  store i32 %28, i32* %9, align 4
  br label %29

29:                                               ; preds = %55, %18
  %30 = load i32, i32* %11, align 4
  %31 = load i32, i32* %9, align 4
  %32 = add nsw i32 %31, %30
  store i32 %32, i32* %9, align 4
  %33 = load i64, i64* @SYSTIMER_CS, align 8
  %34 = load %struct.systimer*, %struct.systimer** %8, align 8
  %35 = getelementptr inbounds %struct.systimer, %struct.systimer* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = shl i32 1, %36
  %38 = call i32 @bcm_systimer_tc_write_4(i64 %33, i32 %37)
  %39 = load i64, i64* @SYSTIMER_C0, align 8
  %40 = load %struct.systimer*, %struct.systimer** %8, align 8
  %41 = getelementptr inbounds %struct.systimer, %struct.systimer* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = mul nsw i32 %42, 4
  %44 = sext i32 %43 to i64
  %45 = add nsw i64 %39, %44
  %46 = load i32, i32* %9, align 4
  %47 = call i32 @bcm_systimer_tc_write_4(i64 %45, i32 %46)
  %48 = load i32, i32* @SYSTIMER_CLO, align 4
  %49 = call i32 @bcm_systimer_tc_read_4(i32 %48)
  store i32 %49, i32* %10, align 4
  %50 = load i32, i32* %10, align 4
  %51 = load i32, i32* %9, align 4
  %52 = sub nsw i32 %50, %51
  %53 = sext i32 %52 to i64
  %54 = icmp sge i64 %53, 0
  br i1 %54, label %55, label %59

55:                                               ; preds = %29
  %56 = load i32, i32* %11, align 4
  %57 = mul nsw i32 %56, 2
  store i32 %57, i32* %11, align 4
  %58 = load i32, i32* %10, align 4
  store i32 %58, i32* %9, align 4
  br label %29

59:                                               ; preds = %29
  %60 = load %struct.systimer*, %struct.systimer** %8, align 8
  %61 = getelementptr inbounds %struct.systimer, %struct.systimer* %60, i32 0, i32 1
  store i32 1, i32* %61, align 4
  %62 = load i32, i32* %12, align 4
  %63 = call i32 @intr_restore(i32 %62)
  store i32 0, i32* %4, align 4
  br label %66

64:                                               ; preds = %3
  %65 = load i32, i32* @EINVAL, align 4
  store i32 %65, i32* %4, align 4
  br label %66

66:                                               ; preds = %64, %59
  %67 = load i32, i32* %4, align 4
  ret i32 %67
}

declare dso_local i32 @intr_disable(...) #1

declare dso_local i32 @bcm_systimer_tc_read_4(i32) #1

declare dso_local i32 @bcm_systimer_tc_write_4(i64, i32) #1

declare dso_local i32 @intr_restore(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
